--- a/doc/dissertation/resources/implementation.tex
+++ b/doc/dissertation/resources/implementation.tex
@@ -13,6 +13,8 @@ This section will:
 
 \section{Building the Application Framework} % (fold)
 \label{sec:building_the_application_framework}
+% Designing state into the parser (two stage impl)
+% How did the NT tracker come about - why was it insufficient to track all nt parses the same way? -> they are all parsed the same, but they have different semantic meaning for the precondition verification. 
 
 % section building_the_application_framework (end)
 
