--- a/doc/dissertation/resources/testing.tex
+++ b/doc/dissertation/resources/testing.tex
@@ -2,7 +2,8 @@
 % Why was this strategy chosen over other possible strategies.
 % Deficiencies in the testing strategy, 
 % Focus on testing outcomes of interest.
-% Evaluation of the techniques in hindsight.
+% Evaluation of the techniques in hindsigh.
+% How automation could've improved testing (HUnit, Haskell-based Fuzzers)
 
 \chapter{Testing} % (fold)
 \label{cha:testing}
