Completed first draft of the metaverify design section.

--- a/doc/dissertation/resources/evaluation.tex
+++ b/doc/dissertation/resources/evaluation.tex
@@ -14,6 +14,10 @@ This section will include:
 
 % Could have used a FAR more rigorous design process and treated it more like a traditional software project.
 
+% - Funcall and the other special forms are important for the quality of the project.
+% - Discuss what would've otherwise been done in 'future' work -> Show that it is still possible, and indicate how the drive in this direction has been influencing the existing portions of the project. 
+% Error reporting could be far better in some circumstances - more accurate diagnostics would be a great help to the language designer. 
+
 % Contributions
 % Failures
 % Future Work
