--- a/doc/dissertation/resources/implementation.tex
+++ b/doc/dissertation/resources/implementation.tex
@@ -25,6 +25,9 @@ This section will:
 
 \subsection{Building the Verification Framework} % (fold)
 \label{sub:building_the_verification_framework}
+% Need to discuss the practicalities of solving the mutually recursive rule problem (the production trace and additional RuleTag types). 
+% The theoretical underpinning of this. 
+
 
 % subsection building_the_verification_framework (end)
 
