Completed first draft of precondition verification algorithm.

--- a/doc/dissertation/ABSOL_Ara_Adkins.tex
+++ b/doc/dissertation/ABSOL_Ara_Adkins.tex
@@ -77,6 +77,8 @@
 \newcommand{\la}{\langle}
 \newcommand{\ra}{\rangle}
 
+% Some algorithm shorthand
+
 \newcounter{requirementcounter}
 \newcommand*{\reqlabel}[1]{R\refstepcounter{requirementcounter}\therequirementcounter\label{#1}}
 \newcommand*{\reqref}[1]{R\ref{#1}}
