--- a/doc/dissertation/resources/glossary.tex
+++ b/doc/dissertation/resources/glossary.tex
@@ -123,3 +123,12 @@
         A parser is a program that takes a string of tokens (usually from a \gls{lexer}) and builds an \acrshort{ast} for out of these tokens based on the language grammar. 
     }
 }
+
+\newglossaryentry{diverge}{
+    name=Diverge,
+    text=diverge,
+    description={
+        A computer program is said to \textit{diverge} if it never terminates or terminates in some unintended or exceptional state.
+        (CITE)? 
+    }
+}
