--- a/doc/dissertation/resources/implementation.tex
+++ b/doc/dissertation/resources/implementation.tex
@@ -20,6 +20,7 @@ This section will:
 
 \section{Building the Lexer and Parser} % (fold)
 \label{sec:building_the_lexer_and_parser}
+% The precondition verifier is implemented in separate functions as much as possible. This ensures that it doesn't add unnecessary clutter to the parser itself. 
 
 % section building_the_lexer_and_parser (end)
 
